force-app/main/default/objects/Success_Pod__c/Success_Pod__c.object-meta.xml
<CustomObject>
    <description>Used to allow grouping of Success Resources.</description>
    <label>Success Pod</label>
    <nameField>
        <label>Success Pod ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Success Pods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>