force-app/main/default/objects/Success_Pod__c/fields/Committee__c.field-meta.xml
<CustomField>
    <fullName>Committee__c</fullName>
    <description>for import of Advising Committee</description>
    <label>Committee</label>
    <length>10</length>
    <type>Text</type>
</CustomField>