force-app/main/default/objects/Success_Pod__c/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
    <description>The name of the email template for this pod in MC</description>
    <label>Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>