force-app/main/default/objects/Success_Pod__c/fields/Plans__c.field-meta.xml
<CustomField>
    <fullName>Plans__c</fullName>
    <description>This is used for Coach Assignment and Advisor Manager access. The Advisor Manager record should have one of these Plan Code values in the Success_Resource.Plan_Code__c field in order to have access to this POD's queue.</description>
    <inlineHelpText>This is used for Coach Assignment and Advisor Manager access. The Advisor Manager record should have one of these Plan Code values in the Success_Resource.Plan_Code__c field in order to have access to this POD's queue.</inlineHelpText>
    <label>Plans</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARPUPBSP</fullName>
            </value>
            <value>
                <fullName>ASPGSBA</fullName>
            </value>
            <value>
                <fullName>ASPGSBS</fullName>
            </value>
            <value>
                <fullName>BABDABS</fullName>
            </value>
            <value>
                <fullName>BABUSBABA</fullName>
            </value>
            <value>
                <fullName>BABUSCBA</fullName>
            </value>
            <value>
                <fullName>BABUSFIMBA</fullName>
            </value>
            <value>
                <fullName>BABUSGBA</fullName>
            </value>
            <value>
                <fullName>BABUSGLBA</fullName>
            </value>
            <value>
                <fullName>BABUSRBA</fullName>
            </value>
            <value>
                <fullName>BABUSSBA</fullName>
            </value>
            <value>
                <fullName>BABUSTBA</fullName>
            </value>
            <value>
                <fullName>BAFIMBS</fullName>
            </value>
            <value>
                <fullName>BAMGTBS</fullName>
            </value>
            <value>
                <fullName>BAMKTBS</fullName>
            </value>
            <value>
                <fullName>CSMCMSTBA</fullName>
            </value>
            <value>
                <fullName>ECNTRCBS</fullName>
            </value>
            <value>
                <fullName>ECNTRMBS</fullName>
            </value>
            <value>
                <fullName>EDSLSTBAE</fullName>
            </value>
            <value>
                <fullName>ESEEEBSE</fullName>
            </value>
            <value>
                <fullName>ESEMGBSE</fullName>
            </value>
            <value>
                <fullName>FAARTHBA</fullName>
            </value>
            <value>
                <fullName>LAASBBA</fullName>
            </value>
            <value>
                <fullName>LABLSBLS</fullName>
            </value>
            <value>
                <fullName>LACOMBS</fullName>
            </value>
            <value>
                <fullName>LAENGBA</fullName>
            </value>
            <value>
                <fullName>LAFASBS</fullName>
            </value>
            <value>
                <fullName>LAFMSBA</fullName>
            </value>
            <value>
                <fullName>LAGCUBA</fullName>
            </value>
            <value>
                <fullName>LAGCUBS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>