force-app/main/default/objects/Success_Pod__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>This is used for Coach Assignment and Advisor Manager access. The Advisor Manager record should have one of these Program Code values in the Success_Resource_Program_Code__c field in order to have access to this POD's queue.</description>
    <inlineHelpText>This is used for Coach Assignment and Advisor Manager access. The Advisor Manager record should have one of these Program Code values in the Success_Resource_Program_Code__c field in order to have access to this POD's queue.</inlineHelpText>
    <label>Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AD-HOC</fullName>
            </value>
            <value>
                <fullName>GRAD</fullName>
            </value>
            <value>
                <fullName>UGAS</fullName>
            </value>
            <value>
                <fullName>UGBA</fullName>
            </value>
            <value>
                <fullName>UGCS</fullName>
            </value>
            <value>
                <fullName>UGES</fullName>
            </value>
            <value>
                <fullName>UGHI</fullName>
            </value>
            <value>
                <fullName>UGLA</fullName>
            </value>
            <value>
                <fullName>UGLS</fullName>
            </value>
            <value>
                <fullName>UGNH</fullName>
            </value>
            <value>
                <fullName>UGNU</fullName>
            </value>
            <value>
                <fullName>UGPP</fullName>
            </value>
            <value>
                <fullName>UGPR</fullName>
            </value>
            <value>
                <fullName>UGSU</fullName>
            </value>
            <value>
                <fullName>UGTB</fullName>
            </value>
            <value>
                <fullName>UGTE</fullName>
            </value>
            <value>
                <fullName>UGUC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>