force-app/main/default/objects/Success_Pod__c/fields/Success_Resource_Pod_Association_Count__c.field-meta.xml
<CustomField>
    <fullName>Success_Resource_Pod_Association_Count__c</fullName>
    <description>Counts the number of Success Resource Pod Association records this Pod has.</description>
    <inlineHelpText>Number of Success Resource Pod Association record for this pod.</inlineHelpText>
    <label>Success Resource Pod Association Count</label>
    <summaryForeignKey>Success_Resource_Pod_Association__c.Success_Pod__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>