force-app/main/default/objects/Success_Pod__c/recordTypes/Advisor.recordType-meta.xml
<RecordType>
    <fullName>Advisor</fullName>
    <active>true</active>
    <description>This is an advisor record type.</description>
    <label>Advisor</label>
</RecordType>