force-app/main/default/objects/Success_Pod__c/recordTypes/Coach.recordType-meta.xml
<RecordType>
    <fullName>Coach</fullName>
    <active>true</active>
    <description>This is a coach record type.</description>
    <label>Coach</label>
</RecordType>