force-app/main/default/objects/Success_Pod__c/listViews/All_Advisor_Pods.listView-meta.xml
<ListView>
    <fullName>All_Advisor_Pods</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Program__c</columns>
    <columns>Plans__c</columns>
    <columns>Committee__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Success_Pod__c.Advisor</value>
    </filters>
    <label>All Advisor Pods</label>
</ListView>