force-app/main/default/objects/Success_Pod__c/listViews/All_Coache_Pods.listView-meta.xml
<ListView>
    <fullName>All_Coache_Pods</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>RECORDTYPE</columns>
    <columns>Program__c</columns>
    <columns>Plans__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Success_Pod__c.Coach</value>
    </filters>
    <label>All Coach Pods</label>
</ListView>