force-app/main/default/objects/Success_Pod__c/listViews/SH1_Success_Pod.listView-meta.xml
<ListView>
    <fullName>SH1_Success_Pod</fullName>
    <filterScope>Queue</filterScope>
    <label>SH1</label>
    <queue>SH1</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>