force-app/main/default/objects/Success_Pod__c/listViews/SH2_Success_Pod.listView-meta.xml
<ListView>
    <fullName>SH2_Success_Pod</fullName>
    <filterScope>Queue</filterScope>
    <label>SH2</label>
    <queue>SH2</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>