force-app/main/default/objects/Success_Pod__c/listViews/SH3_Success_Pod.listView-meta.xml
<ListView>
    <fullName>SH3_Success_Pod</fullName>
    <filterScope>Queue</filterScope>
    <label>SH3</label>
    <queue>SH3</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>