force-app/main/default/objects/Success_Pod__c/listViews/SH4_Success_Pod.listView-meta.xml
<ListView>
    <fullName>SH4_Success_Pod</fullName>
    <filterScope>Queue</filterScope>
    <label>SH4</label>
    <queue>SH4</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>