force-app/main/default/objects/Success_Pod__c/listViews/SH5_Success_Pod.listView-meta.xml
<ListView>
    <fullName>SH5_Success_Pod</fullName>
    <filterScope>Queue</filterScope>
    <label>SH5</label>
    <queue>SH5</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>