force-app/main/default/objects/Success_Pod__c/listViews/SH6_Success_Pod.listView-meta.xml
<ListView>
    <fullName>SH6_Success_Pod</fullName>
    <filterScope>Queue</filterScope>
    <label>SH6</label>
    <queue>SH6</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>