force-app/main/default/objects/Success_Pod__c/listViews/SH7_Success_Pod.listView-meta.xml
<ListView>
    <fullName>SH7_Success_Pod</fullName>
    <filterScope>Queue</filterScope>
    <label>SH7</label>
    <queue>SH7</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>