force-app/main/default/objects/Success_Pod__c/listViews/SH_Success_Hub_Backup_Success_Pod.listView-meta.xml
<ListView>
    <fullName>SH_Success_Hub_Backup_Success_Pod</fullName>
    <filterScope>Queue</filterScope>
    <label>SH Success Hub Backup</label>
    <queue>SH_Success_Hub_Backup</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>