force-app/main/default/objects/Success_Pod__c/listViews/UCPPDO_Success_Pod.listView-meta.xml
<ListView>
    <fullName>UCPPDO_Success_Pod</fullName>
    <filterScope>Queue</filterScope>
    <label>UCPPDO</label>
    <queue>UCPPDO</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>