force-app/main/default/objects/Success_Pod__c/listViews/UG_Advisor_Fallback_Queue_Success_Pod.listView-meta.xml
<ListView>
    <fullName>UG_Advisor_Fallback_Queue_Success_Pod</fullName>
    <columns>NAME</columns>
    <columns>Committee__c</columns>
    <columns>Plans__c</columns>
    <columns>Program__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Queue</filterScope>
    <label>UG Advisor Fallback Queue</label>
    <queue>UG_Advisor_Fallback_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>