force-app/main/default/objects/Success_Pod__c/listViews/UG_CISA_Mass_Email_May_2017_Success_Pod.listView-meta.xml
<ListView>
    <fullName>UG_CISA_Mass_Email_May_2017_Success_Pod</fullName>
    <filterScope>Queue</filterScope>
    <label>UG CISA Mass Email - May 2017</label>
    <queue>UG_CISA_Mass_Email_May_2017</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>