force-app/main/default/objects/Success_Pod__c/listViews/UGAAAC_Success_Pod.listView-meta.xml
<ListView>
    <fullName>UGAAAC_Success_Pod</fullName>
    <filterScope>Queue</filterScope>
    <label>UGAAAC</label>
    <queue>UGAAAC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>